--- a/src/app/components/modals/modal-containers/mobile-modal/mobile-modal.component.sass
+++ b/src/app/components/modals/modal-containers/mobile-modal/mobile-modal.component.sass
@@ -7,15 +7,15 @@
 	height: 100%
 	padding: 24px
 
-.modal__firstRow
-	display: flex
-	flex-direction: row
-	align-items: center
-	justify-content: space-between
-
-.modal__closeButton
-	background: none
-	border: none
+.modal
+	&__firstRow
+		display: flex
+		flex-direction: row
+		align-items: center
+		justify-content: space-between
+	&__closeButton
+		background: none
+		border: none
 
 .title
 	font-size: 28px
