--- a/src/app/components/modals/modal-containers/partners-login-from/partners-login-from.component.html
+++ b/src/app/components/modals/modal-containers/partners-login-from/partners-login-from.component.html
@@ -1,9 +1,9 @@
 	<form
 		[formGroup]='formGroup'>
 		<input
-			formControlName='email'
-			class='formInput'
-			[class.errorFormInput]='isControlValid("name")'
+			formControlName='name'
+			class='form__input'
+			[class.error_form_input]='isControlValid("name")'
 			placeholder='Наименование организации'>
 		<ng-container *ngIf='validateControl("name","required")'>
 			<app-form-error-message validationMessage='Это поле обязательно'></app-form-error-message>
@@ -13,8 +13,8 @@
 		</ng-container>
 		<input
 			formControlName='email'
-			class='formInput'
-			[class.errorFormInput]='isControlValid("email")'
+			class='form__input'
+			[class.error_form_input]='isControlValid("email")'
 			placeholder='Email'>
 		<ng-container *ngIf='validateControl("email","required")'>
 			<app-form-error-message validationMessage='Это поле обязательно'></app-form-error-message>
@@ -27,8 +27,8 @@
 		</ng-container>
 		<input
 			formControlName='password'
-			class='formInput'
-			[class.errorFormInput]='isControlValid("password")'
+			class='form__input'
+			[class.error_form_input]='isControlValid("password")'
 			placeholder='Пароль'
 			type='password'>
 		<ng-container *ngIf='validateControl("password","required")'>
@@ -37,7 +37,7 @@
 		<ng-container *ngIf='validateControl("password","maxlength")'>
 			<app-form-error-message validationMessage='Максимальная длина превышена'></app-form-error-message>
 		</ng-container>
-		<div class='loginBtn'>
+		<div class='login__btn'>
 			<app-button
 				[isLarge]='true'
 				[isPrimary]='true'
@@ -49,7 +49,7 @@
 				Я уже зарегистировался(-ась)
 			</button>
 		</div>
-		<div class='loginBtn' (click)='this.dialog.openLoginEmailDialog()'>
+		<div class='login__btn' (click)='this.dialog.openLoginEmailDialog()'>
 			<app-button
 				value='Вход для партнёров'
 				[isLarge]='true'
