--- a/src/app/components/modals/modal-content/login-form/login-form.component.sass
+++ b/src/app/components/modals/modal-content/login-form/login-form.component.sass
@@ -1,6 +1,6 @@
 @import "src/app/styles/mixins.sass"
 
-.formInput
+.form__input
 	display: flex
 	border: 1px solid rgba(0, 11, 38, 0.16)
 	margin-top: 24px
@@ -12,47 +12,44 @@
 		width: 100%
 
 @include _700
-	.formInput:first-child
+	.form__input:first-child
 		margin-top: 48px
-
-
 
 .title
 	font-size: 28px
-.errorFormInput
+.error_form_input
 	border: 2px solid red
 
-.modal__container
-	background: #FFFFFF
-	border-radius: 24px
-	max-width: 480px
-	padding: 48px
+.modal
+	&__container
+		background: #FFFFFF
+		border-radius: 24px
+		max-width: 480px
+		padding: 48px
+	&__firstRow
+		display: flex
+		flex-direction: row
+		justify-content: space-between
+		align-items: center
+		margin-bottom: 48px
+	&__closeButton
+		width: 18px
+		height: 18px
+		background: navajowhite
+	&__underLinks
+		display: flex
+		flex-direction: row
+		justify-content: space-between
+		margin-top: 16px
+		& button
+			color: #07C88EFF
+			background: none
+			border: none
+			&:hover
+				cursor: pointer
+				color: #0f8d6a
 
-.modal__firstRow
-	display: flex
-	flex-direction: row
-	justify-content: space-between
-	align-items: center
-	margin-bottom: 48px
 
-.modal__closeButton
-	width: 18px
-	height: 18px
-	background: navajowhite
-
-.loginBtn
+.login__btn
 	margin-top: 32px
 
-.modal__underLinks
-	display: flex
-	flex-direction: row
-	justify-content: space-between
-	margin-top: 16px
-	button
-		color: #07C88EFF
-		background: none
-		border: none
-
-	button:hover
-		cursor: pointer
-		color: #0f8d6a
