--- a/src/app/components/modals/modal-content/modal-menu-content/modal-menu-content.component.html
+++ b/src/app/components/modals/modal-content/modal-menu-content/modal-menu-content.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf='user !== null; else nonAuth'>
 	<div class='modal__profile_row'>
-		<img src='./assets/images/34Syn2ezKLM.jpeg'
+		<img src='/assets/images/34Syn2ezKLM.jpeg'
 		     class='profile__image'/>
 		<div class='modal__profile_info'>
 			<p *ngIf='user.firstame != null && user.secondname != null; else defaultname'>
@@ -12,7 +12,7 @@
 				</p>
 			</ng-template>
 			<div class='modal__balance'>
-				<img class='avatar' src='./assets/images/img.png'>
+				<img class='avatar' src='/assets/images/img.png'>
 				<p class='balance'>
 					0
 				</p>
