--- a/src/app/components/ui/product-card/product-card.component.html
+++ b/src/app/components/ui/product-card/product-card.component.html
@@ -1,11 +1,14 @@
-<div class="productCardWrapper">
-	<div class="productCardImgWrapper">
-		<h5 class="productBrand">{{brand}}</h5><img src="{{imgUrl}}" alt=""/>
+<div class='product_card__wrapper'>
+	<div class='product_card__img_wrapper'>
+		<h5 class='product_card__brand'>{{brand}}</h5><img src='{{imgUrl}}'
+		                                                   alt='' />
 	</div>
-	<h4 class="productName">{{productName}}</h4><h4
-                class="productType">{{productType}}</h4>
-                <div class="productCost">
-                    <img class="costIcon" src='assets/images/img.png' alt=""/>
-	{{cost}}
+	<h4 class='product_card__name'>{{productName}}</h4><h4
+	class='product_card__type'>{{productType}}</h4>
+	<div class='product_card__cost'>
+		<img class='product_card__cost__icon'
+		     src='/assets/images/img.png'
+		     alt='coin' />
+		{{cost}}
 	</div>
 </div>
