--- a/src/app/pages/market-page/market-page.component.html
+++ b/src/app/pages/market-page/market-page.component.html
@@ -1,63 +1,63 @@
-<div class='marketWrapper'>
-	<div class='marketTitleWrapper'>
+<div class='market_wrapper'>
+	<div class='market__title'>
 		<h1>ЭкоМаркет</h1>
-		<div class='filterChipsWrapper'>
-			<button class='filterChipsActive'>По популярности</button>
-			<button class='filterChips'>По цене</button>
-			<button class='filterChips'>По новизне</button>
+		<div class='filter_chips_wrapper'>
+			<button class='filter_chips-active'>По популярности</button>
+			<button class='filter_chips'>По цене</button>
+			<button class='filter_chips'>По новизне</button>
 		</div>
 	</div>
-	<div class='mainContentWrapper'>
+	<div class='main_content_wrapper'>
 		<div class='temp'>
-			<button class='removeFiltersBtn'
+			<button class='remove_filters_btn'
 			        (click)='openFiltersDialog()'>
 				Фильтры
 			</button>
 			<div class='filters_wrapper'>
 				<app-filter></app-filter>
 			</div>
-			<button class='removeFiltersBtn'>Сбросить фильтры</button>
+			<button class='remove_filters_btn'>Сбросить фильтры</button>
 		</div>
-		<div class='productsTable'>
-			<div class='productsTableRow'>
-				<div class=balanceCard>
-				    <div class="balanceCardTitle">
+		<div class='products_table'>
+			<div class='products_table__row'>
+				<div class='balance__card'>
+				    <div class='balance__card__title'>
 				        На вашем балансе
-				        <img class="balanceLogo" src="assets/images/img.png"/>
+				        <img class='balance__logo' src="/assets/images/img.png"/>
 				        <div class="balance">200</div>
 				    </div>*/}
 				    Вы можете обменять их на скидку 200 руб
-				    <button class="promoCodeBtn">Получить промокод</button>
+				    <button class='promo_code__btn'>Получить промокод</button>
 				</div>
 
 				<app-product-card
-					imgUrl='assets/images/marketProductImage.png'
+					imgUrl='/assets/images/marketProductImage.png'
 					brand='Nike'
 					productName='Nike Air Max 2021'
 					productType='Мужская обувь'
 					cost='1000'></app-product-card>
 				<app-product-card
-					imgUrl='assets/images/marketProductImage.png'
+					imgUrl='/assets/images/marketProductImage.png'
 					brand='Nike'
 					productName='Nike Air Max 2021'
 					productType='Мужская обувь'
 					cost='1000'></app-product-card>
 			</div>
-			<div class='productsTableRow'>
+			<div class='products_table__row'>
 				<app-product-card
-					imgUrl='assets/images/marketProductImage.png'
+					imgUrl='/assets/images/marketProductImage.png'
 					brand='Nike'
 					productName='Nike Air Max 2021'
 					productType='Мужская обувь'
 					cost='1000'></app-product-card>
 				<app-product-card
-					imgUrl='assets/images/marketProductImage.png'
+					imgUrl='/assets/images/marketProductImage.png'
 					brand='Nike'
 					productName='Nike Air Max 2021'
 					productType='Мужская обувь'
 					cost='1000'></app-product-card>
 				<app-product-card
-					imgUrl='assets/images/marketProductImage.png'
+					imgUrl='/assets/images/marketProductImage.png'
 					brand='Nike'
 					productName='Nike Air Max 2021'
 					productType='Мужская обувь'
