--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -1,6 +1,6 @@
 <div class='profile_container'>
 	<h1 class='profile_title'>Личный кабинет</h1>
-	<div class='mainContentWrapper'>
+	<div class='main_content__wrapper'>
 		<div class='userCardWrapper'>
 			<app-user-card
 				[user]='user'
