--- a/src/app/components/modals/modal-containers/modal-container/modal-container.component.sass
+++ b/src/app/components/modals/modal-containers/modal-container/modal-container.component.sass
@@ -1,20 +1,21 @@
 .title
 	font-size: 28px
 
-.modal__container
-	background: #FFFFFF
-	border-radius: 24px
-	max-width: 480px
-	padding: 48px
+.modal
+	&__container
+		background: #FFFFFF
+		border-radius: 24px
+		max-width: 480px
+		padding: 48px
+	&__firstRow
+		display: flex
+		flex-direction: row
+		justify-content: space-between
+		align-items: center
+		margin-bottom: 48px
+	&__closeButton
+		border: 0
+		background: none
+		&:hover
+			cursor: pointer
 
-.modal__firstRow
-	display: flex
-	flex-direction: row
-	justify-content: space-between
-	align-items: center
-	margin-bottom: 48px
-
-.modal__closeButton
-	width: 18px
-	height: 18px
-	background: navajowhite
