--- a/src/app/components/ui/product-card/product-card.component.sass
+++ b/src/app/components/ui/product-card/product-card.component.sass
@@ -1,56 +1,52 @@
-.productCardWrapper
-	max-width: 274px
-	min-height: 371px
+.product_card
+	&__wrapper
+		max-width: 274px
+		min-height: 371px
+		margin-bottom: 48px
 
-	margin-bottom: 48px
+	&__img_wrapper
+		position: relative
+		overflow: hidden
+		object-fit: cover
+		border-radius: 16px
+		& img
+			width: 274px
 
-.productCardImgWrapper
-	position: relative
-	overflow: hidden
-	object-fit: cover
-	border-radius: 16px
+.product_card
+	&__brand
+		margin: 0
+		padding: 6px 10px
 
-	img
-		width: 274px
+		position: absolute
+		top: 24px
+		left: 24px
 
-.productBrand
-	margin: 0
-	padding: 6px 10px
+		background: #FFFFFF
 
-	position: absolute
-	top: 24px
-	left: 24px
+		box-shadow: 0px 4px 24px rgba(51, 51, 51, 0.12)
+		border-radius: 10px
+	&__name
+		margin-top: 16px
+		margin-bottom: 0
+	&__type
+		margin-top: 5px
+		font-weight: 500
+		color: rgba(0, 11, 38, 0.56)
+	&__cost
+		display: flex
+		align-items: center
 
-	background: #FFFFFF
-
-	box-shadow: 0px 4px 24px rgba(51, 51, 51, 0.12)
-	border-radius: 10px
-
-.productName
-	margin-top: 16px
-	margin-bottom: 0
-
-.productType
-	margin-top: 5px
-	font-weight: 500
-	color: rgba(0, 11, 38, 0.56)
-
-.costIcon
-	width: 24px
-	height: 24px
-	margin-right: 8px
-
-.productCost
-	display: flex
-	align-items: center
-
-	margin-top: 16px
-	font-weight: 600
-	color: black
-	font-size: 14px
+		margin-top: 16px
+		font-weight: 600
+		color: black
+		font-size: 14px
+		&__icon
+			width: 24px
+			height: 24px
+			margin-right: 8px
 
 @media screen and (max-width: 500px)
-	.productCardImgWrapper
+	.product_card__img_wrapper
 		img
 			max-width: 343px
 			width: 100%
