--- a/src/app/pages/market-page/market-page.component.sass
+++ b/src/app/pages/market-page/market-page.component.sass
@@ -1,20 +1,18 @@
-.marketWrapper
-	padding-top: 40px
-	width: 100%
-	max-width: 1200px
-	margin: 0 auto
-	margin-bottom: 108px
+.market
+	&_wrapper
+		padding-top: 40px
+		width: 100%
+		max-width: 1200px
+		margin: 0 auto
+		margin-bottom: 108px
 
-.marketTitleWrapper
-	padding: 20px 0
-	display: flex
-	justify-content: space-between
+	&__title
+		padding: 20px 0
+		display: flex
+		justify-content: space-between
 
-.filterChipsWrapper
-	display: flex
-	align-items: center
 
-.filterChips
+.filter_chips
 	line-height: 20px
 	padding: 10px 20px
 
@@ -23,6 +21,7 @@
 
 	border: 0px
 	border-radius: 61px
+
 	&:hover
 		cursor: pointer
 		background: rgba(0, 0, 0, 0.08)
@@ -30,18 +29,23 @@
 	&:not(:last-child)
 		margin-right: 12px
 
-.filterChipsActive
-	@extend .filterChips
-	background: rgba(6, 14, 33, 0.88)
-	color: white
-	&:hover
-		background: rgba(1, 1, 7, 0.88)
+	&_wrapper
+		display: flex
+		align-items: center
 
+	&-active
+		@extend .filter_chips
+		background: rgba(6, 14, 33, 0.88)
+		color: white
 
-.mainContentWrapper
-	display: flex
-	justify-content: space-between
-	align-items: flex-start
+		&:hover
+			background: rgba(1, 1, 7, 0.88)
+
+.main_content
+	&_wrapper
+		display: flex
+		justify-content: space-between
+		align-items: flex-start
 
 .temp
 	display: flex
@@ -51,7 +55,7 @@
 	margin-right: 47px
 
 
-.removeFiltersBtn
+.remove_filters_btn
 	margin-top: 35px
 	font-weight: 500
 	font-size: 16px
@@ -62,20 +66,23 @@
 	border: none
 	padding: 12px 30px
 
+	&:first-child
+		display: none
 
-.removeFiltersBtn:first-child
-	display: none
+		&:hover
+			background-color: rgba(62, 80, 114, 0.30)
 
-	&:hover
-		background-color: rgba(62, 80, 114, 0.30)
+.products_table
+	width: 100%
 
-.productsTableRow
-	display: flex
-	justify-content: space-between
-	&:not(:last-child)
-		margin-bottom: 48px
+	&__row
+		display: flex
+		justify-content: space-between
 
-.balanceCard
+		&:not(:last-child)
+			margin-bottom: 48px
+
+.balance__card
 	position: relative
 	max-width: 274px
 	width: 100%
@@ -92,25 +99,25 @@
 
 	box-shadow: 0px 12px 32px rgba(121, 121, 121, 0.12), 0px 4px 24px rgba(21, 45, 103, 0.12)
 
-.balanceCardTitle
-	margin-top: 130.5px
+	&__title
+		margin-top: 130.5px
 
-	color: #000000
-	display: flex
-	align-items: center
-	justify-content: center
+		color: #000000
+		display: flex
+		align-items: center
+		justify-content: center
 
-	margin-bottom: 9px
+		margin-bottom: 9px
 
 .balance
 	font-weight: 600
 
-.balanceLogo
-	width: 16px
-	height: 16px
-	margin: 0 4px 0 8px
+	&__logo
+		width: 16px
+		height: 16px
+		margin: 0 4px 0 8px
 
-.promoCodeBtn
+.promo_code__btn
 	background: #07C88E
 	color: #FFFFFF
 
@@ -121,39 +128,32 @@
 
 	border-radius: 8px
 	border: 0
+
 	&:hover
 		cursor: pointer
 		background: #059b6f
 
-.productsTable
-	width: 100%
-
-
 @media screen and (max-width: 500px)
-	.removeFiltersBtn:first-child
-		margin: 0
-		display: flex
-		justify-content: center
-		max-width: 343px
-		width: 100%
-
 	.temp
 		margin: 0
+	.remove_filters_btn
+		&:first-child
+			margin: 0
+			display: flex
+			justify-content: center
+			max-width: 343px
+			width: 100%
 
-	.removeFiltersBtn:last-child
-		display: none
-
+		&:last-child
+			display: none
 	.filters_wrapper
 		display: none
-
-	.filterChipsWrapper
+	.filter_chips_wrapper
 		display: none
-
-	.mainContentWrapper
+	.main_content_wrapper
 		flex-direction: column
 		align-items: center
-
-	.productsTableRow
+	.products_table__row
 		flex-direction: column
 		margin-top: 32px
 		align-items: center
