--- a/src/app/components/banner-swiper/banner-swiper.component.html
+++ b/src/app/components/banner-swiper/banner-swiper.component.html
@@ -1,7 +1,7 @@
-<div class='customSwiperWrapper'>
+<div class='custom_swiper__wrapper'>
 	<swiper
 		[config]='config'
-		class='customSwiper'
+		class='custom_swiper'
 	>
 		<ng-template swiperSlide>
 			<app-banner
