--- a/src/app/components/card-list-switcher/card-list-switcher.component.html
+++ b/src/app/components/card-list-switcher/card-list-switcher.component.html
@@ -1,13 +1,13 @@
-<div class='switcherWrapper'>
-	<div class='switcherNav'>
+<div class='switcher__wrapper'>
+	<div class='switcher__nav'>
 		<a routerLink="/profile/promocode"
-			class='switchBtn'
+			class='switch__btn'
 		>
 			Промокоды
 		</a>
 		<a
 			routerLink="/profile/history"
-			class='switchBtn'
+			class='switch__btn'
 		>
 			История
 		</a>
