--- a/src/app/components/cards/history-card/history-card.component.html
+++ b/src/app/components/cards/history-card/history-card.component.html
@@ -1,27 +1,27 @@
-<div class='historyCard'>
+<div class='history_card'>
 	<ul class='infoList'>
 		<li>
 			<label htmlFor='address'>Адрес</label>
 			<p
 				id='address'
-				class='historyCardInfo'
+				class='history_card__info'
 			>Казань, проспект Победы, 141</p>
 		</li>
 		<li>
 			<label>Материал</label>
-			<div class='historyCardInfo'>
-				<ul class='materialsList'>
-					<li class='materialsListElement'>
+			<div class='history_card__info'>
+				<ul class='materials_list'>
+					<li class='materials_list__element'>
 						<span>
 							Пластик: 1 кг
 						</span>
 					</li>
-					<li class='materialsListElement'>
+					<li class='materials_list__element'>
 						<span>
 							Стекло: 3 кг
 						</span>
 					</li>
-					<li class='materialsListElement'>
+					<li class='materials_list__element'>
 						<span>
 							Бумага: 5 кг
 						</span>
@@ -31,7 +31,7 @@
 		</li>
 		<li>
 			<label>Дата</label>
-			<p class='historyCardInfo'>25.09.2021</p>
+			<p class='history_card__info'>25.09.2021</p>
 		</li>
 	</ul>
 </div>
