--- a/src/app/components/cards/promocode-card/promocode-card.component.html
+++ b/src/app/components/cards/promocode-card/promocode-card.component.html
@@ -1,24 +1,24 @@
-<div class='promoCodeCard'>
-	<div class='promoCodeImgWrapper'>
+<div class='promo_code__card'>
+	<div class='promo_code__img_wrapper'>
 		<img [src]='img' alt="" class='promoCodeImg'/>
 	</div>
-	<div class=promoCodeCardInfoWrapper>
+	<div class=promo_code__card__info__wrapper>
 		<ul class='infoList'>
 			<li>
 				<label>Дата создания:</label>
-				<p id="date" class='promoCodeCardInfo'>25.09.2021</p>
+				<p id="date" class='promo_code__card__info'>25.09.2021</p>
 			</li>
 			<li>
 				<label htmlFor="link">Ссылка на товар:</label>
-				<p id="link" class='promoCodeCardInfoLink'>
+				<p id="link" class='promo_code__card__info__link'>
 					<a href="#" class='link'>
 						adidas.com/clothes/WddfJfsf7dt6fsHFIuj5пdfsZFu...
 					</a>
 				</p>
 			</li>
 		</ul>
-		<div class='promoCodeBtnWrapper'>
-			<button class='promoCodeBtn'>Показать qr-код</button>
+		<div class='promo_code__btn__wrapper'>
+			<button class='promo_code__btn'>Показать qr-код</button>
 		</div>
 	</div>
 </div>
