--- a/src/app/components/cards/user-card/user-card.component.sass
+++ b/src/app/components/cards/user-card/user-card.component.sass
@@ -1,29 +1,33 @@
-.userCard
-	padding: 32px
-	max-width: 384px
-	width: 100%
-	height: 392px
-	text-align: center
-	border: 1px solid rgba(62, 80, 114, 0.16)
-	box-sizing: border-box
-	border-radius: 20px
+.user
 
-.userAvatarContainer
-	border-radius: 100%
+	&__card
+		padding: 32px
+		max-width: 384px
+		width: 100%
+		height: 392px
+		text-align: center
+		border: 1px solid rgba(62, 80, 114, 0.16)
 
-.userCardImg
-	width: 128px
-	height: 128px
-	border-radius: 50%
+		box-sizing: border-box
+		border-radius: 20px
 
-.userInfo
-	margin-top: 16px
-	color: rgba(0, 11, 38, 0.72)
+	&__image
+		width: 128px
+		height: 128px
+		border-radius: 50%
 
-	p
-		line-height: 20px
+	&__avatar_container
+		border-radius: 100%
 
-.editBtn
+
+	&__info
+		margin-top: 16px
+		color: rgba(0, 11, 38, 0.72)
+
+		p
+			line-height: 20px
+
+.button__edit
 	margin-top: 24px
 	width: 100%
 
