--- a/src/app/components/ui/main-page-card/main-page-card.component.html
+++ b/src/app/components/ui/main-page-card/main-page-card.component.html
@@ -1,20 +1,20 @@
-<div class='navCard__wrapper'>
-	<div class='navCard'>
-		<div class='navCardContent'>
-			<h1 class='navCardTitle'>{{title}}</h1>
-			<p class='navCardText'>{{text}}</p>
-			<a [href]='link' class='navCardBtn'>
+<div class='nav_card__wrapper'>
+	<div class='nav_card'>
+		<div class='nav_card__content'>
+			<h1 class='nav_card__title'>{{title}}</h1>
+			<p class='nav_card__text'>{{text}}</p>
+			<a [href]='link' class='nav_card__btn'>
 				<img
 					src='./assets/images/rightArrow.png'
-					alt=''
+					alt='right arrow'
 				/>
 			</a>
 		</div>
-		<div class='navCardImgWrapper'>
+		<div class='nav_card__img_wrapper'>
 			<img
-				class='navCardImg'
+				class='nav_card__img'
 				[src]='bgImg'
-				alt=''
+				alt='left arrow'
 			/>
 		</div>
 	</div>
