--- a/src/app/components/ui/main-page-card/main-page-card.component.sass
+++ b/src/app/components/ui/main-page-card/main-page-card.component.sass
@@ -1,18 +1,7 @@
 @import "src/app/styles/mixins.sass"
 
-.navCard__wrapper
-	width: 100%
-	max-width: 588px
 
-	&:not(:last-child)
-		margin-right: 24px
-
-@include _700
-	.navCard__wrapper
-		margin-top: 16px
-
-
-.navCard
+.nav_card
 	min-height: 300px
 	height: 100%
 	box-sizing: content-box
@@ -27,73 +16,84 @@
 	border: 1px solid rgba(18, 34, 88, 0.12)
 	border-radius: 16px
 
-.navCardTitle
-	margin-top: 0
-	margin-bottom: 14px
-	line-height: inherit
+	&__wrapper
+		width: 100%
+		max-width: 588px
 
-.navCardText
-	margin-bottom: 46px
-	color: rgba(0, 11, 38, 0.56)
-	line-height: 24px
+		&:not(:last-child)
+			margin-right: 24px
 
-.navCardBtn
-	display: flex
-	align-items: center
-	width: 48px
+		@include _700
+			margin-top: 16px
 
-	background: rgba(62, 80, 114, 0.08)
-	border: 0
-	border-radius: 8px
-
-	padding: 12px
-
-	&:hover
-		cursor: pointer
-		background: rgba(20, 20, 24, 0.2)
-
-.navCardContent
-	padding: 40px 0 0 40px
-
-.navCardImgWrapper
-	display: flex
-	align-items: flex-end
-	justify-content: end
-	padding-bottom: 6.5px
-	width: 100%
-
-.navCardImg
-	height: auto
-	width: 100%
-	object-fit: cover
-
-@media screen and (max-width: 795px)
-	.navCardTitle
-		font-size: 24px
+	&__title
+		margin-top: 0
+		margin-bottom: 14px
 		line-height: inherit
-	.navCardText
-		font-size: 16px
-	.navCard
+
+		@include _795
+			font-size: 24px
+			line-height: inherit
+
+	&__text
+		margin-bottom: 46px
+		color: rgba(0, 11, 38, 0.56)
+		line-height: 24px
+
+		@include _795
+			font-size: 16px
+
+	&__btn
+		display: flex
+		align-items: center
+		width: 48px
+
+		background: rgba(62, 80, 114, 0.08)
+		border: 0
+		border-radius: 8px
+
+		padding: 12px
+
+		&:hover
+			cursor: pointer
+			background: rgba(20, 20, 24, 0.2)
+
+	&__content
+		padding: 40px 0 0 40px
+
+	&__img_wrapper
+		display: flex
+		align-items: flex-end
+		justify-content: end
+		padding-bottom: 6.5px
+		width: 100%
+
+		@include _795
+			position: absolute
+			width: 50%
+			padding: 0
+			right: 0
+
+			&:not(:last-child)
+				margin-bottom: 24px
+
+	&__img
+		height: auto
+		width: 100%
+		object-fit: cover
+
+		@include _795
+			max-height: 150px
+			width: auto
+
+	@include _795
 		margin-top: 0
 		position: relative
 		background: #FFFFFF
-	.navCardImg
-		max-height: 150px
-		width: auto
-	.navCardImg
-		width: auto
-	.navCardImgWrapper
-		position: absolute
-		width: 50%
-		padding: 0
-		right: 0
-
-	.navCard__wrapper:not(:last-child)
-		margin-bottom: 24px
 
 
 @media screen and (min-width: 0px)
-	.navCardImgWrapper
+	.nav_card__img_wrapper
 		bottom: -5px
 
 
