--- a/src/app/pages/main-page/main-page.component.html
+++ b/src/app/pages/main-page/main-page.component.html
@@ -1,18 +1,18 @@
-<main class='mainCards__wrapper'>
+<main class='main_cards__wrapper'>
 	<app-banner-swiper></app-banner-swiper>
-	<div class='navCardsWrapper'>
-		<div class='navCards'>
+	<div class='nav_cards__wrapper'>
+		<div class='nav_cards'>
 			<app-main-page-card class='card'
-				text="Посмотри, где в твоем городе можно сдать вторсырьё на переработку"
-				title='Пункты сбора'
-				bgImg='./assets/images/map.svg'
-				link='/f'
+			                    text='Посмотри, где в твоем городе можно сдать вторсырьё на переработку'
+			                    title='Пункты сбора'
+			                    bgImg='./assets/images/map.svg'
+			                    link='/f'
 			></app-main-page-card>
 			<app-main-page-card class='card'
-				text="Используй заработанные экокоины для покупки товаров из переработанных материалов "
-				title='ЭкоМаркет'
-				bgImg='./assets/images/market.svg'
-				link='/f'
+			                    text='Используй заработанные экокоины для покупки товаров из переработанных материалов '
+			                    title='ЭкоМаркет'
+			                    bgImg='./assets/images/market.svg'
+			                    link='/f'
 			></app-main-page-card>
 		</div>
 	</div>
