--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -1,13 +1,13 @@
-<div class='profile_container'>
-	<h1 class='profile_title'>Личный кабинет</h1>
-	<div class='main_content__wrapper'>
-		<div class='userCardWrapper'>
+<div class='profile__container'>
+	<h1 class='profile__title'>Личный кабинет</h1>
+	<div class='main__wrapper'>
+		<div class='card__wrapper'>
 			<app-user-card
 				[user]='user'
 			>
 			</app-user-card>
 		</div>
-		<app-card-list-switcher  style='width: 100%'>
+		<app-card-list-switcher class='card__switcher'>
 		</app-card-list-switcher>
 	</div>
 </div>
