--- a/src/app/components/card-list-switcher/card-list-switcher.component.sass
+++ b/src/app/components/card-list-switcher/card-list-switcher.component.sass
@@ -1,28 +1,32 @@
 @import "src/app/styles/mixins.sass"
 
-.switcherWrapper
-	width: 100%
+.switcher
 
-.switcherNav
-	display: flex
-	align-items: center
-	height: 40px
-	margin-bottom: 24px
-	border-bottom: 1px #eaeaea solid
-.switchBtn
-	@include mainNavLink
-	font-size: 20px
-	&:not(:last-child)
-		margin-right: 24px
+	&__wrapper
+		width: 100%
 
+	&__nav
+		display: flex
+		align-items: center
+		height: 40px
+		margin-bottom: 24px
+		border-bottom: 1px #eaeaea solid
 
-.switchBtnActive
-	@include mainNavLinkActive
-	font-size: 20px
-	&:not(:last-child)
-		margin-right: 24px
+		@include _700
+			margin: 24px auto
+			max-width: 343px
 
-@media (max-width: 600px)
-	.switcherNav
-		margin: 24px auto
-		max-width: 343px
+.switch
+
+	&__btn
+		@include mainNavLink
+		font-size: 20px
+		&:not(:last-child)
+			margin-right: 24px
+
+		&_active
+			@include mainNavLinkActive
+			font-size: 20px
+			&:not(:last-child)
+				margin-right: 24px
+
