--- a/src/app/components/cards/promocode-card/promocode-card.component.sass
+++ b/src/app/components/cards/promocode-card/promocode-card.component.sass
@@ -1,74 +1,75 @@
 @import "src/app/styles/mixins.sass"
+@import "src/app/styles/varibles.sass"
 
-.promoCodeImg
-	height: 100%
-	width: 100%
+.promo_code
+
+	&__img
+		height: 100%
+		width: 100%
+
+	&__card
+		padding-bottom: 24px
+		display: flex
+		align-items: center
+		border-bottom: 1px #eaeaea solid
+
+		&__info
+			line-height: 20px
+			margin-top: 2px
+
+			&__link
+				@extend .promo_code__card__info
+				word-break: break-word
+
+			&__wrapper
+				padding: 7px 0
+				display: flex
+
+				@include _700
+					flex-direction: column
+
+			@include _700
+				flex-direction: column
+
+	&__btn
+		background: rgba(62, 80, 114, 0.08)
+		border: 0
+		border-radius: 8px
+		font-size: 14px
+		line-height: 20px
+		padding: 10px 20px
+
+		&:hover
+			cursor: pointer
+			background: rgba(52, 69, 91, 0.22)
+
+		@include _700
+			width: 100%
+
+		&__wrapper
+			width: 100%
+
+	&__img_wrapper
+		height: 100%
+		width: 100%
+		max-width: 180px
+		margin-right: 24px
+
+		@include _700
+			max-width: 100%
+			margin: 0
 
 
-.promoCodeCard
-	padding-bottom: 24px
-	display: flex
-	align-items: center
-	border-bottom: 1px #eaeaea solid
-
-	@include _700
-		flex-direction: column
-
-.promoCodeImgWrapper
-	height: 100%
-	width: 100%
-	max-width: 180px
-	margin-right: 24px
-
-	@include _700
-		max-width: 100%
-		margin: 0
-
-
-.infoList
+.info_list
 	list-style: none
 	padding-left: 0
 	margin-top: 0
 
-.promoCodeCardInfoWrapper
-	padding: 7px 0
-	display: flex
-
-	@include _700
-		flex-direction: column
-
-.promoCodeCardInfo
-	line-height: 20px
-	margin-top: 2px
-
-.promoCodeCardInfoLink
-	@extend .promoCodeCardInfo
-	word-break: break-word
-
 .link
-	color: #07C88E
+	color: $button-success
 
 	&:hover
-		color: #05916a
-
-.promoCodeBtnWrapper
-	width: 100%
-
-
-.promo_code__btn
-	background: rgba(62, 80, 114, 0.08)
-	border: 0
-	border-radius: 8px
-	font-size: 14px
-	line-height: 20px
-	padding: 10px 20px
-
-	&:hover
-		cursor: pointer
-		background: rgba(52, 69, 91, 0.22)
-
-	@include _700
-		width: 100%
+		color: $button-success-hover
 
 li:last-child
 	margin-top: 16px
