--- a/src/app/components/cards/promocode-card/promocode-card.component.html
+++ b/src/app/components/cards/promocode-card/promocode-card.component.html
@@ -1,6 +1,6 @@
 <div class='promo_code__card'>
 	<div class='promo_code__img_wrapper'>
-		<img [src]='img' alt="" class='promoCodeImg'/>
+		<img [src]='img' alt="" class='promo_code__img'/>
 	</div>
 	<div class=promo_code__card__info__wrapper>
 		<ul class='infoList'>
